k8s/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: econcierge
spec:
  type: ExternalName
  externalName: postgres.shared-db.svc.cluster.local
  ports:
  - port: 5432
